<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="8">
    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Color"
        android:textSize="12pt"
        android:gravity="bottom"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/color_def"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Default"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/color_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Color_Red"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/color_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Color_Green"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:id="@+id/color_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Color_Blue"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
</LinearLayout>